--- a/index.html
+++ b/index.html
@@ -29,38 +29,32 @@
       <label for="file">Input tipo file</label>
       <input type="file" name="file" id="file" />
       <br /><br />
-      <label
-        for="Input de tipo hidden"
-        name="input name tipo"
-        id="input tipo name"
-      ></label>
-      <input type="hidden" />
-      <br /><br />
-      <label for="Input tipo image">Input tipo image</label>
+      <label for="Image">Input tipo image</label>
       <input
       type="image"src=https://images.emojiterra.com/google/android-11/512px/1f431.png
       type="image" name="image" id="image">
       <br /><br />
-      <label for="hidden">Input tipo hidden</label>
-      <input type="hidden" />
-      <label for="Input tipo number">Input tipo number</label>
-      <input type="number" min="0" max="15" />
+      <label for="hidden"> tipo hidden</label>
+      <input type="hidden" name="hidden" id="hidden" />
+      <br /><br />
+      <label for="number">Input tipo number</label>
+      <input type="number" min="0" max="15" name="number" id="number" />
       <br />
       <br />
       <label for="password">Input tipo password</label>
       <input type="password" name="password" id="password" />
       <br /><br />
       <label for="radio">Input tipo radio</label>
-      <input type="radio" />
+      <input type="radio" name="radio" id="radio" />
       <br /><br />
       <label for="range">Input tipo range</label>
-      <input type="range" min="0" max="3" />
+      <input type="range" min="0" max="3" name="range" id="range" />
       <br /><br />
       <label for="time">Input tipo time</label>
       <input type="time" name="time" id="time" />
       <br /><br />
-      <label for="datetime-local">input tipo datetime-local</label>
-      <input type="datetime-local" />
+      <label for="datetime-local">Input tipo datetime-local</label>
+      <input type="datetime-local" name="datetime-local" id="datetime-local" />
       <br /><br />
       <label for="button">Input tipo botton</label>
       <input type="button" value="botton" name="button" id="button" />
