--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <label for="file">Input tipo file</label>
       <input type="file" name="file" id="file" />
       <br /><br />
-      <label for="Image">Input tipo image</label>
+      <label for="image">Input tipo image</label>
       <input
       type="image"src=https://images.emojiterra.com/google/android-11/512px/1f431.png
       type="image" name="image" id="image">
@@ -56,8 +56,8 @@
       <label for="datetime-local">Input tipo datetime-local</label>
       <input type="datetime-local" name="datetime-local" id="datetime-local" />
       <br /><br />
-      <label for="button">Input tipo botton</label>
-      <input type="button" value="botton" name="button" id="button" />
+      <label for="button">Input tipo button</label>
+      <input type="button" value="button" name="button" id="button" />
       <br /><br />
       <button type="submit">Enviar</button>
       <button type="reset">Limpiar</button>
