--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       type="image"src=https://images.emojiterra.com/google/android-11/512px/1f431.png
       type="image" name="image" id="image">
       <br /><br />
-      <label for="hidden"> tipo hidden</label>
+      <label for="hidden"> Input tipo hidden</label>
       <input type="hidden" name="hidden" id="hidden" />
       <br /><br />
       <label for="number">Input tipo number</label>
